2006-11-16  Stephen J. Turnbull  <stephen@xemacs.org>

	* internals/internals.texi
	(Better Rendering Support -- Configuration with the Interim Patches):
	Fix examples of configuration via X resources.
	(Better Rendering Support -- Implementation): Fix description of
	xftFont resources, introduce fcFontName resource.

2006-11-11  Aidan Kehoe  <kehoea@parhasard.net>

	* lispref/faces.texi (Face Convenience Functions):
	Add information on how to specify a face's font for a given Mule
	charset. 
	
	* lispref/specifiers.texi (Specifiers):
	* lispref/specifiers.texi (Simple Specifier Usage):
	* lispref/specifiers.texi (Specifiers In-Depth):
	* lispref/specifiers.texi (Specifier Tag Functions):
	* lispref/specifiers.texi (Specifier Instantiation Functions):
	Update the documentation of specifiers to reflect the new support
	for Mule character sets and associating tags with them. 

2006-08-05  Aidan Kehoe  <kehoea@parhasard.net>

	* lispref/objects.texi (String Type):
	Give details of the raw string syntax, taken from SXEmacs and
	Python. 

2006-07-19  Stephen J. Turnbull  <stephen@xemacs.org>

	* new-users-guide/edit.texi (Insert): Document bogosity in
	vendor labeling of DEL key.
	(Numeric Argument): Remove spurious RETs from keystroke examples.
	Thanks to Michael C. Wescott <wescott@sc.rr.com>.

2006-07-16  Aidan Kehoe  <kehoea@parhasard.net>

	* xemacs/custom.texi (File Variables):
	Make it clearer that file variables are buffer-local. 
	* xemacs/custom.texi (Faces):
	"must be encoding" -> "must be encoded". 
	
2006-07-16  Aidan Kehoe  <kehoea@parhasard.net>

	* lispref/variables.texi (Creating Buffer-Local):
	Mention that buffer-local variables are created when file local
	variables are set. 
	
2006-07-08  Aidan Kehoe  <kehoea@parhasard.net>

	* internals/internals.texi (Internal String Encoding):
	Mention that UTF-8 would be a reasonable alternative encoding. 
	* internals/internals.texi (Internal Character Encoding):